--- a/package.json
+++ b/package.json
@@ -22,19 +22,22 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.43.0",
-    "@trpc/next": "^10.43.0",
-    "@trpc/react-query": "^10.43.0",
-    "@trpc/server": "^10.43.0",
+    "@tanstack/react-query": "^4.35.3",
+    "@trpc/client": "^10.38.4",
+    "@trpc/next": "^10.38.4",
+    "@trpc/react-query": "^10.38.4",
+    "@trpc/server": "^10.38.4",
+    "@types/node": "20.6.3",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.290.0",
-    "next": "^15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "^15.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.47.0",
     "react-loading-skeleton": "^3.3.1",
     "recharts": "^2.9.3",
@@ -49,7 +52,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "^13.0.0",
     "postcss": "^8",
     "prisma": "^5.6.0",
     "tailwindcss": "^3",
